--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "tinacms dev -c \"astro dev\"",
+    "dev": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -11,11 +11,9 @@
   "dependencies": {
     "@astrojs/check": "^0.5.10",
     "astro": "^4.6.0",
-    "tinacms": "^1.6.1",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@tinacms/cli": "^1.5.43",
     "@types/node": "^20.12.7"
   }
 }
