--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,8 +7,15 @@ public_folder: /public
 collections:
   - name: posts
     label: Posts
-    folder: src/content/posts
+    folder: /src/content/posts
+    create: true
     fields:
-      - label: Language
-        name: language
+      - label: Title
+        name: title
         widget: string
+      - label: Summary
+        name: summary
+        widget: string
+      - label: Body
+        name: body
+        widget: markdown
