--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/check": "^0.5.10",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.6.0",
+    "marked": "^12.0.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
   },
