--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7"
+    "@types/node": "^20.12.7",
+    "sass": "^1.75.0"
   }
 }
