--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,12 +2,12 @@ backend:
   name: github
   branch: main
   repo: waynevanson/waynevanson
-media_folder: /src/media
+media_folder: src/media
 public_folder: /public
 collections:
   - name: posts
     label: Posts
-    folder: /src/content/posts
+    folder: src/content/posts
     create: true
     fields:
       - label: Title
